[package]
name = "plotly"
version = "0.1.0"
description = "Wrapper for Plotly.js"
authors = ["Ioannis Giagkiozis <i.giagkiozis@gmail.com>"]
license = "MIT"
homepage = "https://github.com/igiagkiozis/plotly"
documentation = "https://github.com/igiagkiozis/plotly"
repository = "https://github.com/igiagkiozis/plotly"
edition = "2018"
keywords = ["plot", "chart"]

exclude = [
    "target/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"
askama = "0.9.0"
rand = "0.7.3"
num = "0.2.1"