[package]
name = "plotly"
version = "0.1.0"
description = "Wrapper for Plotly.js"
authors = ["Ioannis Giagkiozis <i.giagkiozis@gmail.com>"]
license = "MIT"
homepage = "https://github.com/igiagkiozis/plotly"
documentation = "https://github.com/igiagkiozis/plotly"
repository = "https://github.com/igiagkiozis/plotly"
edition = "2018"
keywords = ["plot", "chart", "plotly"]

exclude = [
    "target/*"
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
askama = "0.9.0"
rand = "0.7.3"
num = "0.2.1"