[workspace]
members = [
    "3d_charts",
    "basic_charts",
    "custom_controls",
    "customization/consistent_static_format_export",
    "customization/density_mapbox_example",
    "customization/multiple_plots_example",
    "downsampling",
    "financial_charts",
    "images",
    "kaleido",
    "maps",
    "ndarray",
    "plotly_utils",
    "scientific_charts",
    "shapes",
    "statistical_charts",
    "static_export",
    "subplots",
    "themes",
]
resolver = "2"
