[package]
name = "plotly"
version = "0.9.1"
description = "A plotting library powered by Plotly.js"
authors = ["Ioannis Giagkiozis <i.giagkiozis@gmail.com>"]
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/plotly/plotly.rs"
documentation = "https://docs.rs/plotly"
repository = "https://github.com/plotly/plotly.rs"
edition = "2018"
keywords = ["plot", "chart", "plotly"]

exclude = ["target/*"]

[features]
kaleido = ["plotly_kaleido"]
plotly_ndarray = ["ndarray"]
plotly_image = ["image"]
plotly_noembed = []
wasm = ["getrandom", "js-sys", "wasm-bindgen", "wasm-bindgen-futures"]
with-axum = ["rinja/with-axum", "rinja_axum"]

[dependencies]
rinja = { version = "0.3", features = ["serde_json"] }
rinja_axum = { version = "0.3.0", optional = true }
dyn-clone = "1"
erased-serde = "0.4"
getrandom = { version = "0.2", features = ["js"], optional = true }
image = { version = "0.25", optional = true }
js-sys = { version = "0.3", optional = true }
plotly_derive = { version = "0.9.1", path = "../plotly_derive" }
plotly_kaleido = { version = "0.9.1", path = "../plotly_kaleido", optional = true }
ndarray = { version = "0.16.0", optional = true }
once_cell = "1"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
serde_repr = "0.1"
serde_with = ">=2, <4"
rand = "0.8"
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[dev-dependencies]
csv = "1.1.6"
image = "0.25"
itertools = ">=0.10, <0.14"
itertools-num = "0.1.3"
ndarray = "0.16.0"
plotly_kaleido = { version = "0.9.1", path = "../plotly_kaleido" }
rand_distr = "0.4"
