[package]
name = "plotly"
version = "0.12.1"
description = "A plotting library powered by Plotly.js"
authors = ["Ioannis Giagkiozis <i.giagkiozis@gmail.com>"]
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/plotly/plotly.rs"
documentation = "https://docs.rs/plotly"
repository = "https://github.com/plotly/plotly.rs"
edition = "2021"
keywords = ["plot", "chart", "plotly"]

exclude = ["target/*"]

[features]
kaleido = ["plotly_kaleido"]
kaleido_download = ["plotly_kaleido/download"]

plotly_ndarray = ["ndarray"]
plotly_image = ["image"]
plotly_embed_js = []

[dependencies]
askama = { version = "0.14.0", features = ["serde_json"] }
dyn-clone = "1"
erased-serde = "0.4"
image = { version = "0.25", optional = true }
plotly_derive = { version = "0.12", path = "../plotly_derive" }
plotly_kaleido = { version = "0.12", path = "../plotly_kaleido", optional = true }
ndarray = { version = "0.16", optional = true }
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = ">=2, <4"
rand = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen-futures = { version = "0.4" }
wasm-bindgen = { version = "0.2" }

[dev-dependencies]
csv = "1.1"
image = "0.25"
itertools = ">=0.10, <0.15"
itertools-num = "0.1"
ndarray = "0.16"
plotly_kaleido = { path = "../plotly_kaleido", features = ["download"] }
rand_distr = "0.5"
base64 = "0.22"
