[package]
name = "plotly_derive"
version = "0.8.4"
description = "Internal proc macro crate for Plotly-rs."
authors = ["Ioannis Giagkiozis <i.giagkiozis@gmail.com>"]
license = "MIT"
homepage = "https://github.com/igiagkiozis/plotly"
documentation = "https://docs.rs/plotly"
repository = "https://github.com/igiagkiozis/plotly"
edition = "2018"
keywords = ["plot", "chart", "plotly"]

[dependencies]
quote = "1"
syn = "2"
proc-macro2 = "1"
darling = "0.20"

[lib]
proc-macro = true
