[package]
name = "plotly_kaleido"
version = "0.11.0"
description = "Additional output format support for plotly using Kaleido"
authors = [
    "Ioannis Giagkiozis <i.giagkiozis@gmail.com>",
    "Andrei Gherghescu andrei-ng@protonmail.com",
]
license = "MIT"
readme = "README.md"
workspace = ".."
homepage = "https://github.com/plotly/plotly.rs"
documentation = "https://docs.rs/plotly_kaleido"
repository = "https://github.com/plotly/plotly.rs"
edition = "2021"
keywords = ["plot", "chart", "plotly", "ndarray"]

exclude = ["target/*", "kaleido/*", "examples/*"]

[features]
download = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dunce = "1.0"
base64 = "0.22"

[dev-dependencies]
plotly_kaleido = { version = "0.11", path = ".", features = ["download"] }

[build-dependencies]
zip = "2.1"
directories = ">=4, <6"
