[package]
name = "plotly_orca"
version = "0.2.1"
description = "Additional output format support for plotly using Orca"
authors = ["Ioannis Giagkiozis <i.giagkiozis@gmail.com>"]
license = "MIT"
readme = "README.md"
workspace = ".."
homepage = "https://github.com/igiagkiozis/plotly"
documentation = "https://docs.rs/plotly_orca"
repository = "https://github.com/igiagkiozis/plotly"
edition = "2018"
keywords = ["plot", "chart", "plotly", "orca"]

exclude = [
    "target/*"
]

[dependencies]
rand = "0.7.3"