[package]
name = "plotly_static"
version = "0.0.1"
description = "Export Plotly graphs to static images using WebDriver"
authors = ["Andrei Gherghescu andrei-ng@protonmail.com"]
license = "MIT"
workspace = ".."
homepage = "https://github.com/plotly/plotly.rs"
repository = "https://github.com/plotly/plotly.rs"
edition = "2021"
keywords = ["plot", "static", "image", "export", "chart", "plotly", "ndarray"]

exclude = ["target/*"]

[features]
# default = ["geckodriver"]
# default = ["chromedriver"]
download = []
geckodriver = []
chromedriver = []

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
plotly = { path = "../plotly" }
rand = "0.9"
serde_json = "1.0"
base64 = "0.22"
fantoccini = "0.21"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
urlencoding = "2"

[dev-dependencies]
plotly_static = { path = ".", features = ["download", "chromedriver"] }
ndarray = { version = "0.16" }

[build-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dirs = "5.0"
zip = "4.0"
webdriver-downloader = "0.16"
