[package]
name = "plotly_static"
version = "0.0.1"
description = "Export Plotly graphs to static images using WebDriver"
authors = ["Andrei Gherghescu andrei-ng@protonmail.com"]
license = "MIT"
workspace = ".."
homepage = "https://github.com/plotly/plotly.rs"
repository = "https://github.com/plotly/plotly.rs"
edition = "2021"
keywords = ["plot", "static", "image", "export", "chart", "plotly", "ndarray"]

exclude = ["target/*"]

[features]
webdriver_download = []
geckodriver = []
chromedriver = []
# This is used for enabling extra debugging messages and debugging functionality
debug = []

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
rand = "0.9"
serde_json = "1.0"
base64 = "0.22"
fantoccini = "0.21"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
urlencoding = "2"
reqwest = { version = "0.11", features = ["blocking"] }

[dev-dependencies]
plotly_static = { path = "." }
ndarray = { version = "0.16" }
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dirs = "5.0"
zip = "4.0"
webdriver-downloader = "0.16"
