[package]
name = "plotly_static"
version = "0.1.0"
description = "Export Plotly graphs to static images using WebDriver"
authors = ["Andrei Gherghescu andrei-ng@protonmail.com"]
license = "MIT"
workspace = ".."
homepage = "https://github.com/plotly/plotly.rs"
repository = "https://github.com/plotly/plotly.rs"
edition = "2021"
keywords = ["plotly", "static", "image", "export", "webdriver"]

exclude = ["target/*"]

[features]
webdriver_download = []
geckodriver = []
chromedriver = []
# This is used for enabling extra debugging messages and debugging functionality
debug = []

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
rand = "0.9"
serde_json = "1.0"
base64 = "0.22"
fantoccini = "0.22"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
urlencoding = "2"
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
plotly_static = { path = "." }
ndarray = { version = "0.17" }
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dirs = "6.0"
zip = "5.0"
webdriver-downloader = "0.16"

# Needed for docs.rs to build the documentation
[package.metadata.docs.rs]
features = ["chromedriver"]
