[package]
name = "custom-controls"
version = "0.1.0"
authors = ["Michael Freeborn <michaelfreeborn1@gmail.com>"]
edition = "2021"

[dependencies]
itertools = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
ndarray = "0.15"

plotly = { path = "../../plotly" }
plotly_utils = { path = "../plotly_utils" }