[package]
name = "financial-charts"
version = "0.1.0"
authors = ["Michael Freeborn <michaelfreeborn1@gmail.com>"]
edition = "2021"

[dependencies]
csv = "1.1"
plotly = { path = "../../plotly" }
plotly_utils = { path = "../plotly_utils" }
serde = "1.0"
chrono = "0.4"
rand = "0.8"
rand_chacha = "0.3"
