[package]
name = "images"
version = "0.1.0"
authors = ["Michael Freeborn <michaelfreeborn1@gmail.com>"]
edition = "2021"

[dependencies]
image = "0.25"
ndarray = "0.17"
plotly = { path = "../../plotly", features = [
    "plotly_image",
    "plotly_ndarray",
] }

plotly_utils = { path = "../plotly_utils" }
