[package]
name = "static_export_example"
version = "0.1.0"
authors = ["Andrei Gherghescu andrei-ng@protonmail.com"]
edition = "2021"
description = "Example demonstrating static image export using plotly_static with WebDriver"
readme = "README.md"

[dependencies]
plotly = { path = "../../plotly", features = ["static_export_default"] }
env_logger = "0.10"
log = "0.4" 
