[package]
name = "consistent_static_format_export"
version = "0.1.0"
edition = "2021"
authors = ["Yuriy D. Sibirmovsky"]
description = "This example demonstrates exporting a plot to SVG, PNG, and PDF and keeping the font size consistent across all formats."

[dependencies]
plotly = { path = "../../../plotly", features = ["static_export_default"] }
env_logger = "0.10"
log = "0.4"
